--- a/dados.html
+++ b/dados.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="dados.css">
+    <script src="dados.js"></script>
 </head>
 
 <body>
@@ -96,24 +97,6 @@
 
         </div>
     </section>
-
-
-
-
-    <style>
-
-    </style>
-
-    <script>
-        function openNav() {
-            document.getElementById("mySidenav").style.width = "100%";
-        }
-
-        function closeNav() {
-            document.getElementById("mySidenav").style.width = "0";
-        }
-
-    </script>
 
 </body>
 
