--- a/home.html
+++ b/home.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="home.css">
+    <script src="home.js"></script>
     <title>Document</title>
+
 </head>
 
 <body>
@@ -49,26 +51,5 @@
 
 
 
-    <style>
-
-    </style>
-
-</body>
-
-
-<script>
-
-    $('<img/>').hide().attr('src', 'http://4.bp.blogspot.com/-3YtwFdb01YI/TnCNSc1c93I/AAAAAAAAA5c/V6g_3ghlw30/s1600/Background+13.jpg').load(function () {
-        $('body').append($(this));
-    });
-
-
-    $('#info').hover(function () {
-        $('body').css('background-image', 'http://4.bp.blogspot.com/-3YtwFdb01YI/TnCNSc1c93I/AAAAAAAAA5c/V6g_3ghlw30/s1600/Background+13.jpg)');
-    }, function () {
-        $('body').css('background', '');
-    });
-
-</script>
 
 </html>
