--- a/info-residências.html
+++ b/info-residências.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="info-resi.css">
+    <script src="dados.js"></script>
 </head>
 <body>
     <section>
@@ -80,21 +81,7 @@
               </div>
             </section>
 
-<style>
 
-
-
-</style>
-<script>
-
-function openNav() {
-        document.getElementById("mySidenav").style.width = "100%";
-    }
-    
-    function closeNav() {
-        document.getElementById("mySidenav").style.width = "0";
-    }
-    </script>
 </body>
 </html>
 
