--- a/info-residências.html
+++ b/info-residências.html
@@ -20,7 +20,7 @@
                             <a href="dados.html">Formulário</a>
                             <a href="fórum.html">Fórum</a>
                             <a href="perfil.html">Perfil</a>
-                            <a href="home.html">logout</a>
+                            <a href="SignInFinal.html">logout</a>
                           </div>
                           <span style="font-size:60px;cursor:pointer;margin-left: 88%;margin-top: 60%;" onclick="openNav()">&#9776;</span>
                 </nav>
