--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="areabotao"> 
   
-  <a href="SignInFinal.html" class="botao">Clica aqui</a>
+  <a href="SignUpFinal.html" class="botao">Clica aqui</a>
 
 </div>
 
