--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
         <div class="grid-item"></div>
 
         <div class="grid-item"></div>
-        <div class="grid-item"><a href="Indexfinal.html" target="_blank">logout</a>
+        <div class="grid-item"><a href="SignInFinal.html" target="_blank">logout</a>
         </div>
 
 
